tests/positive/basic/makeepoch_invalid/input.ci
void main() {
    print(toString(makeEpoch(2025, 2, 30, 0, 0, 0)) + "\n");
}
