tests/negative/semantic/wrong_arg_count_glyphlen/input.ci
void main() {
    print(toString(glyphLen("a", "b")) + "\n");
}
